fix menu z-index

--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -182,7 +182,7 @@ body[dir="rtl"] .side_products div.link a {
     display: inline-block;
     position: absolute;
     width: 0;
-    z-index: 999;
+    z-index: 9;
 }
 
 body[dir="rtl"] .side_products div.link a.active:after {
@@ -539,15 +539,15 @@ body[dir="rtl"] .version_tabs .link {
 .version_tabs .link a.active:before {
     border-color: transparent transparent #FFFFFF;
     border-style: solid;
-    border-width: 8px 12px;
-    bottom: -4px;
+    border-width: 6px 8px;
+    bottom: 0px;
     content: "";
     display: inline-block;
     left: 50%;
-    margin-left: -10px;
+    margin-left: -7px;
     position: absolute;
     width: 0;
-    z-index: 999;
+    z-index: 9;
 }
 
 body[dir="rtl"] .version_tabs .link a.active:before {
